<resources>
    <string name="app_name">Kakuro</string>
    <string name="continueGame">Continue</string>
    <string name="playOnStagedBoard">Play on staged board</string>
    <string name="playOnARandomBoard">Play on a generated board</string>
    <string name="scanABoard">Scan a board to play on</string>
    <string name="imageMainMenu">Kakuro logo</string>
    <string name="selectedCellColor" translatable="false">#56b867</string>
    <string name="errorCellColor" translatable="false">#eb6652</string>
    <string name="smallKakuros">Small Boards</string>
    <string name="mediumKakuros">Medium Boards</string>
    <string name="largeKakuros">Large Boards</string>
    <string name="board3">Board 3</string>
    <string name="board4">Board 4</string>
    <string name="board5">Board 5</string>
    <string name="board6">Board 6</string>
    <string name="board7">Board 7</string>
    <string name="board8">Board 8</string>
    <string name="board9">Board 9</string>
    <string name="board10">Board 10</string>
    <string name="board11">Board 11</string>
    <string name="board12">Board 12</string>
    <string name="board13">Board 13</string>
    <string name="board14">Board 14</string>
    <string name="chooseBoardSize">Choose size of generated board</string>
    <string name="smallBoard" translatable="false">3x3</string>
    <string name="mediumBoard" translatable="false">5x5</string>
    <string name="bigBoard" translatable="false">9x9</string>
    <string name="victory">Victory!</string>
    <string name="victoryMessage">You have won in %1$d seconds!</string>
    <string name="victoryOK">OK</string>
    <string name="solveButton">Solve</string>
    <string name="hintButton">Hint (%1$d)</string>
    <string name="clearButton">Clear</string>
    <string name="clearBoardDialogText">Do you really want to clear the board?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hintsLeft">You have now %1$d hints left to use!</string>
    <string name="noSolution">No solution could be found for given board!</string>
</resources>
