<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.SelectBoardActivity">

        <TextView
                android:text="@string/smallKakuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/board3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="166dp" android:id="@+id/boardbutton3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:tag="3"
                android:onClick="onClickSelectBoard"/>
        <Button
                android:text="@string/board4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="161dp" android:id="@+id/boardbutton4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton3" android:tag="4"
                android:onClick="onClickSelectBoard"/>
        <Button
                android:text="@string/board5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="161dp" android:id="@+id/boardbutton5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton4" android:tag="5"
                android:onClick="onClickSelectBoard"/>
        <Button
                android:text="@string/board6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="161dp" android:id="@+id/boardbutton6" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton5" android:tag="6"
                android:onClick="onClickSelectBoard"/>
        <TextView
                android:text="@string/mediumKakuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/boardbutton6"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <Button
                android:text="@string/board7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton7"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="8dp"
                android:tag="7" android:onClick="onClickSelectBoard"/>

        <Button
                android:text="@string/board8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton8"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton7" android:layout_marginTop="8dp"
                android:tag="8" android:onClick="onClickSelectBoard"/>

        <Button
                android:text="@string/board9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton9"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton8" android:layout_marginTop="8dp"
                android:tag="9" android:onClick="onClickSelectBoard"/>

        <Button
                android:text="@string/board10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton10"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton9" android:layout_marginTop="8dp"
                android:tag="10" android:onClick="onClickSelectBoard"/>

        <TextView
                android:text="@string/largeKakuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.501" app:layout_constraintTop_toBottomOf="@+id/boardbutton10"/>

        <Button
                android:text="@string/board11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton11"
                app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="8dp"
                android:tag="11" android:onClick="onClickSelectBoard"/>

        <Button
                android:text="@string/board12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton12"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton11" android:layout_marginTop="8dp"
                android:tag="12" android:onClick="onClickSelectBoard"/>

        <Button
                android:text="@string/board13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton13"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton12" android:layout_marginTop="8dp"
                android:tag="13" android:onClick="onClickSelectBoard"/>

        <Button
                android:text="@string/board14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boardbutton14"
                app:layout_constraintTop_toBottomOf="@+id/boardbutton13" android:layout_marginTop="8dp"
                android:tag="14" android:onClick="onClickSelectBoard"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>