<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <TextView
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center"
            android:id="@+id/textView"/>
    <ImageView
            android:layout_width="122dp"
            android:layout_height="121dp" app:srcCompat="@android:drawable/sym_def_app_icon"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/imageMainMenu"/>
    <Button
            android:text="@string/continueGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_continue" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:onClick="onClickContinue"/>
    <Button
            android:text="@string/playOnStagedBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_play_staged" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_continue"
            android:onClick="onclickbuttonstaged"/>
    <Button
            android:text="@string/playOnARandomBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_play_random" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_play_staged"/>
    <Button
            android:text="@string/scanABoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_scan_board" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_play_random"/>

</android.support.constraint.ConstraintLayout>