<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:text="@string/chooseBoardSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="197dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
                android:text="@string/smallBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3x3"
                android:layout_weight="1" />

        <Button
                android:text="@string/mediumBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5x5"
                android:layout_weight="1" />

        <Button
                android:text="@string/bigBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button8x8"
                android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>