<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:context=".view.KakuroActivity">

    <com.example.kakuro.view.KakuroBoardView android:id="@+id/kakuroBoard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"/>

    <androidx.gridlayout.widget.GridLayout
            android:id="@+id/numberGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/kakuroBoard"
            app:rowCount="3"
            app:columnCount="4">

        <Button
                android:id="@+id/buttonOne"
                android:text="1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1" />

        <Button
                android:id="@+id/buttonTwo"
                android:text="2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonThree"
                android:text="3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/hintButton"
                android:text="@string/hintButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonFour"
                android:text="4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonFive"
                android:text="5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonSix"
                android:text="6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/solveButton"
                android:text="@string/solveButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonSeven"
                android:text="7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonEight"
                android:text="8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/buttonNine"
                android:text="9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

        <Button
                android:id="@+id/clearButton"
                android:text="@string/clearButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1">
        </Button>

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>